--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       </p>
     </div>
     <div class="tabs flex mb-4">
-      <button class="tab-button flex-1 p-3 bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 text-center cursor-pointer" data-tab="settings" id="settings-tab">Settings</button>
-      <button class="tab-button flex-1 p-3 bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 text-center cursor-pointer" data-tab="replace" id="replace-tab">Replace</button>
-      <button class="tab-button flex-1 p-3 bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 text-center cursor-pointer" data-tab="split" id="split-tab">Chia Chương</button>
+      <button class="tab-button flex-1 p-3 bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 text-center cursor-pointer rounded-t-lg" data-tab="settings" id="settings-tab">Settings</button>
+      <button class="tab-button flex-1 p-3 bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 text-center cursor-pointer rounded-t-lg" data-tab="replace" id="replace-tab">Replace</button>
+      <button class="tab-button flex-1 p-3 bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 text-center cursor-pointer rounded-t-lg" data-tab="split" id="split-tab">Chia Chương</button>
     </div>
 
     <!-- Tab Settings -->
@@ -108,9 +108,7 @@
     <!-- Tab Chia Chương -->
     <div id="split" class="tab-content hidden">
       <h2 id="split-title" class="text-xl mb-4">Chia Chương</h2>
-      <div class="split-mode-buttons flex flex-wrap gap-2 mb-4">
-        <!-- Buttons for modes 2-10 will be added dynamically by JS -->
-      </div>
+      <div class="split-mode-buttons flex flex-wrap gap-2 mb-4"></div>
       <div class="split-container flex flex-col gap-4 md:flex-row md:gap-4">
         <div class="input-section flex-1">
           <textarea id="split-input-text" placeholder="Dán văn bản của bạn vào đây..." class="w-full h-40 p-2 border rounded dark:border-gray-600 dark:bg-gray-700"></textarea>
